# Ablavema

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  ROADMAP.md  ablavema.json  build.rs  clippy.toml
.github/workflows/: release.yml
extra/: TODO_ON_RELEASING.md
extra/fonts/: Lambda-licence.txt
extra/linux/: Ablavema.desktop  PKGBUILD
extra/scoop/: ablavema.json
src/: cli.rs  gui.rs  helpers.rs  installed.rs  main.rs  package.rs  releases.rs  self_updater.rs  settings.rs  style.rs
src/gui/: controls.rs  extra.rs  filters.rs  install.rs  message.rs  package.rs  sort_by.rs  style.rs  tabs.rs
src/gui/tabs/: about.rs  packages.rs  recent_files.rs  self_updater.rs  settings.rs
src/releases/: archived.rs  branched.rs  daily.rs  daily_archive.rs  daily_latest.rs  experimental.rs  experimental_archive.rs  experimental_latest.rs  installed.rs  lts.rs  patch_archive.rs  patch_latest.rs  stable.rs  stable_archive.rs  stable_latest.rs
