[package]
name = "ablavema"
description = "A Blender launcher and version manager"
version = "0.1.0"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
edition = "2018"
homepage = "https://github.com/AlexChaplinBraz/Ablavema"
repository = "https://github.com/AlexChaplinBraz/Ablavema"
readme = "README.md"
license = "MIT"
keywords = ["blender", "launcher", "blend", "gui", "cli"]
categories = ["accessibility", "command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1
# This would reduce binary size by about 12% (~3MB), but leaving it default for now.
#panic = "abort"
# Enable stripping when stabilised https://github.com/rust-lang/rust/issues/72110
#strip = "symbols"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
derive_deref = "1.1"
device_query = "0.2"
directories-next = "2.0"
fs2 = "0.4"
fs_extra = "1.2"
iced_futures = "0.3"
indicatif = "0.15"
itertools = "0.10"
lazy_static = "1.4"
msgbox = "0.6"
prettytable-rs = "0.8"
regex = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
select = "0.5"
serde = { version = "1.0", features = ["derive"] }
timeago = "0.3"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
versions = { version = "3.0", features = ["serde"] }
webbrowser = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
bzip2 = "0.4"
flate2 = "1.0"
iced = { version = "0.3", features = ["glow", "glow_default_system_font"] }
self_update = { version = "0.26", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
tar = "0.4"
xz2 = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
iced = "0.3"
self_update = { version = "0.26", default-features = false, features = ["archive-zip", "rustls"] }
winapi = { version = "0.3", features = ["wincon"] }
zip = "0.5"
