[package]
name = "ablavema"
description = "A Blender launcher and version manager"
version = "0.3.0"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
edition = "2018"
homepage = "https://github.com/AlexChaplinBraz/Ablavema"
repository = "https://github.com/AlexChaplinBraz/Ablavema"
readme = "README.md"
license = "MIT"
keywords = ["blender", "launcher", "blend", "gui"]
categories = ["accessibility"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
# This would reduce binary size by about 12% (~3MB), but leaving it default for now.
#panic = "abort"
# Enable stripping when stabilised https://github.com/rust-lang/rust/issues/72110
#strip = "symbols"

[dependencies]
async-trait = "0.1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
derive_deref = "1"
device_query = "0.2"
directories-next = "2"
fs2 = "0.4"
fs_extra = "1"
iced_futures = "0.3"
itertools = "0.10"
lazy_static = "1"
native-dialog = "0.5"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
select = "0.5"
serde = { version = "1", features = ["derive"] }
timeago = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
versions = { version = "3", features = ["serde"] }
webbrowser = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
bzip2 = "0.4"
flate2 = "1"
glob = "0.3"
iced = { version = "0.3", default-features = false, features = ["glow", "glow_default_system_font"] }
self_update = { version = "0.27", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
tar = "0.4"
xz2 = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
iced = "0.3"
self_update = { version = "0.27", default-features = false, features = ["archive-zip", "rustls"] }
winapi = { version = "0.3", features = ["wincon"] }
zip = "0.5"

[build-dependencies]
png = "0.16"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
