[package]
name = "ablavema"
description = "A Blender launcher and version manager"
version = "0.4.2"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
edition = "2021"
homepage = "https://github.com/AlexChaplinBraz/Ablavema"
repository = "https://github.com/AlexChaplinBraz/Ablavema"
readme = "README.md"
license = "MIT"
keywords = ["blender", "launcher", "blend", "gui"]
categories = ["accessibility"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
# This would reduce binary size by about 12% (~3MB), but leaving it default for now.
#panic = "abort"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["cargo"] }
derive_deref = "1"
device_query = "1"
directories-next = "2"
fs2 = "0.4"
fs_extra = "1"
iced = { version = "0.4", features = ["pure"] }
iced_futures = "0.4"
itertools = "0.10"
lazy_static = "1"
native-dialog = "0.6"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
ron = "0.7"
select = "0.5"
serde = { version = "1", features = ["derive"] }
timeago = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
versions = { version = "4", features = ["serde"] }
webbrowser = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
bzip2 = "0.4"
flate2 = "1"
glob = "0.3"
self_update = { version = "0.30", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
tar = "0.4"
xz2 = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
self_update = { version = "0.30", default-features = false, features = ["archive-zip", "rustls"] }
winapi = { version = "0.3", features = ["wincon"] }
zip = "0.6"

[build-dependencies]
png = "0.17"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
